--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,21 @@
 
 .App {
 	display: flex;
-	margin: auto;
 	width: 88vw;
 	flex-wrap: wrap;
 	background-color: black;
+	justify-content: center;
+	
+
+
 }
 
+
+body {
+	/* background-color: black; */
+	display: flex;
+	justify-content: center;
+	padding: 0;
+	border: 0;
+	margin: 0;
+}
