--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@
 	flex-wrap: wrap;
 	background-color: black;
 	justify-content: center;
+
+		
 	
 
 
@@ -25,5 +27,7 @@ body {
 	justify-content: center;
 	padding: 0;
 	border: 0;
-	margin: 0;
+	background-color: black;
+
+
 }
